Implement AWS adapters for CreateCompactionJobs